clusters/nwk1/gitops/default/whoami/redirectmiddleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-redirectregex
spec:
  redirectRegex:
    regex: ^https://whoami/
    replacement: https://whoami.k8s.rabbito.tech/
