clusters/nwk1/gitops/default/whoami/whoami-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myingressroute
  namespace: default

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`whoami.k8s.rabbito.tech`) || Host(`whoami`)
      kind: Rule
      services:
        - name: whoami
          port: 80
