clusters/nwk1/gitops/default/whoami/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - image: containous/whoami
        name: whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: whoami
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami-ext
spec:
  ingressClassName: traefik
  rules:
  - host: whoami.kutara.io
    http:
      paths:
      - backend:
          service:
            name: whoami
            port:
            number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - secretName: kutara-io-tls
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami-int
spec:
  ingressClassName: traefik
  rules:
  - host: whoami.k8s.rabbito.tech
    http:
      paths:
      - backend:
          service:
            name: whoami
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - secretName: rabbito-tech-tls
